test/Fail/DuplicateExecutable.vars
AGDA_DIR=$PWD/test/Fail/DuplicateExecutable
